--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -131,33 +131,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "5cfe9b80-f2ec-481f-9db5-bb6247b1b472",
       "metadata": {
-        "id": "5cfe9b80-f2ec-481f-9db5-bb6247b1b472"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5cfe9b80-f2ec-481f-9db5-bb6247b1b472",
+        "outputId": "1fca8b8f-1cd3-4328-af7c-af6c3706b4fb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "41\n",
+            "The sound level is between Quiet Room and Alarm Clock\n"
+          ]
+        }
+      ],
       "source": [
         "#si-decibel\n",
         "\n",
-        "x = int(input())\n",
+        "x = int(input( ))\n",
         "if (x>130):\n",
         "  print(\"Noise level is more than a jackhammer\")\n",
-        "elif (x=130)\n",
+        "elif (x==130):\n",
         "  print(\"sound matches the volume of jackhammer\")\n",
-        "elif (x>106 & x<130)\n",
+        "elif (x>106) & (x<130):\n",
         "  print(\"The sound level is between Gas Lawnmower and jackhammer\")\n",
-        "elif (x =106)\n",
+        "elif (x ==106):\n",
         "  print(\"sound matches the volume of Gas Lawnmower\")\n",
-        "elif (x>70 & x<106)\n",
+        "elif (x>70) & (x<106):\n",
         "  print(\"The sound level is between Alarm Clock and Gas Lawnmower\")\n",
-        "elif (x =70)\n",
+        "elif (x ==70):\n",
         "  print(\"sound matches the volume of Alarm Clock\")\n",
-        "elif (x>40 & x<70)\n",
+        "elif (x>40) & (x<70):\n",
         "  print(\"The sound level is between Quiet Room and Alarm Clock\")\n",
-        "\n",
-        "\n",
-        "\n"
+        "elif (x ==40):\n",
+        "  print(\"sound matches the volume of Quiet Room\")\n",
+        "else:\n",
+        "  print(\"Noise level is Less than a Quiet Room \")"
       ]
     },
     {
