--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -131,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "5cfe9b80-f2ec-481f-9db5-bb6247b1b472",
       "metadata": {
         "colab": {
@@ -284,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "679c4ad5-81eb-428d-9665-309ed2c4f870",
       "metadata": {
         "colab": {
@@ -332,12 +332,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "62d13841-8e8b-417b-a70b-d57f4f39af7b",
       "metadata": {
-        "id": "62d13841-8e8b-417b-a70b-d57f4f39af7b"
+        "id": "62d13841-8e8b-417b-a70b-d57f4f39af7b",
+        "outputId": "457cd1ef-e8fb-41f9-da0c-7c7f36e6edce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[True, True, False, True, False]\n"
+          ]
+        }
+      ],
       "source": [
         "forecastData = [49.5, 40.2, 53.7, 48.9, 51.0]\n",
         "\n",
@@ -359,13 +371,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "34afd161-b9f1-4f73-9b48-2bb5d8204bcf",
       "metadata": {
         "tags": [],
-        "id": "34afd161-b9f1-4f73-9b48-2bb5d8204bcf"
+        "id": "34afd161-b9f1-4f73-9b48-2bb5d8204bcf",
+        "outputId": "55f3fb91-092f-48aa-927b-291bc81af849",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "List from 0 to 9 [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] \n",
+            "\n",
+            "List of multiples of 3 [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 66, 69, 72, 75, 78, 81, 84, 87, 90, 93, 96, 99]\n"
+          ]
+        }
+      ],
       "source": [
         "# Make a list of integers from 0 to 9\n",
         "quickList = [i for i in range(10)]\n",
@@ -374,7 +400,7 @@
         "\n",
         "# Make a list that prints all numbers divisible by 3\n",
         "\n",
-        "anotherList = [i for i in range(100) if i%3==0]\n",
+        "#anotherList = [i for i in range(100) if i%3==0]\n",
         "\n",
         "print(\"List of multiples of 3\", anotherList)"
       ]
@@ -399,14 +425,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "42ba7d49-bd42-4073-8594-520ecf4347fc",
       "metadata": {
-        "id": "42ba7d49-bd42-4073-8594-520ecf4347fc"
+        "id": "42ba7d49-bd42-4073-8594-520ecf4347fc",
+        "outputId": "ec5319cc-0d05-49cb-a8c5-0f66e3f18b3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[4, 14, 24, 34, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 54, 64, 74, 84, 94, 104, 114, 124, 134, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 154, 164, 174, 184, 194, 204, 214, 224, 234, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 254, 264, 274, 284, 294, 304, 314, 324, 334, 340, 341, 342, 343, 344, 345, 346, 347, 348, 349, 354, 364, 374, 384, 394, 400, 401, 402, 403, 404, 405, 406, 407, 408, 409, 410, 411, 412, 413, 414, 415, 416, 417, 418, 419, 420, 421, 422, 423, 424, 425, 426, 427, 428, 429, 430, 431, 432, 433, 434, 435, 436, 437, 438, 439, 440, 441, 442, 443, 444, 445, 446, 447, 448, 449, 450, 451, 452, 453, 454, 455, 456, 457, 458, 459, 460, 461, 462, 463, 464, 465, 466, 467, 468, 469, 470, 471, 472, 473, 474, 475, 476, 477, 478, 479, 480, 481, 482, 483, 484, 485, 486, 487, 488, 489, 490, 491, 492, 493, 494, 495, 496, 497, 498, 499, 504, 514, 524, 534, 540, 541, 542, 543, 544, 545, 546, 547, 548, 549, 554, 564, 574, 584, 594, 604, 614, 624, 634, 640, 641, 642, 643, 644, 645, 646, 647, 648, 649, 654, 664, 674, 684, 694, 704, 714, 724, 734, 740, 741, 742, 743, 744, 745, 746, 747, 748, 749, 754, 764, 774, 784, 794, 804, 814, 824, 834, 840, 841, 842, 843, 844, 845, 846, 847, 848, 849, 854, 864, 874, 884, 894, 904, 914, 924, 934, 940, 941, 942, 943, 944, 945, 946, 947, 948, 949, 954, 964, 974, 984, 994]\n"
+          ]
+        }
+      ],
       "source": [
-        "#si-fours"
+        "#si-fours\n",
+        "fours = [i for i in range(1001) if \"4\" in str(i)]\n",
+        "print(fours)"
       ]
     },
     {
@@ -455,14 +495,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "cc849af4-8f06-403d-a3a0-2869a742d58f",
       "metadata": {
-        "id": "cc849af4-8f06-403d-a3a0-2869a742d58f"
+        "id": "cc849af4-8f06-403d-a3a0-2869a742d58f",
+        "outputId": "e9b2729c-5a5d-4d87-96f2-e219f24908ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "422\n",
+            "412\n",
+            "402\n",
+            "392\n",
+            "382\n",
+            "372\n",
+            "362\n",
+            "352\n",
+            "342\n",
+            "332\n",
+            "322\n",
+            "312\n",
+            "302\n",
+            "292\n",
+            "282\n",
+            "272\n",
+            "262\n",
+            "252\n",
+            "242\n",
+            "232\n",
+            "222\n",
+            "212\n",
+            "202\n",
+            "192\n",
+            "182\n",
+            "172\n",
+            "162\n",
+            "152\n",
+            "142\n",
+            "132\n",
+            "122\n",
+            "112\n",
+            "102\n",
+            "92\n"
+          ]
+        }
+      ],
       "source": [
-        "#si-while-loop"
+        "#si-while-loop\n",
+        "x = 432\n",
+        "while (x> 100):\n",
+        "  x -= 10\n",
+        "  print(x)"
       ]
     },
     {
@@ -585,14 +674,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "c7b4c421-59d4-467d-8675-805b55715d7f",
       "metadata": {
-        "id": "c7b4c421-59d4-467d-8675-805b55715d7f"
+        "id": "c7b4c421-59d4-467d-8675-805b55715d7f",
+        "outputId": "0933eccf-a7b5-431f-8a5c-a071dae37241",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ],
       "source": [
-        "#si-prime"
+        "#si-prime\n",
+        "def isPrime(n):\n",
+        "    if n <= 1:\n",
+        "        return False\n",
+        "    for i in range(2, int(n**0.5) + 1):\n",
+        "        if n % i == 0:\n",
+        "            return False\n",
+        "    return True\n",
+        "isPrime(267)"
       ]
     },
     {
@@ -611,14 +723,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
       "metadata": {
-        "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0"
+        "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
+        "outputId": "b7dc594b-0c56-4eb3-829f-0f1409f1a024",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "275.43\n"
+          ]
+        }
+      ],
       "source": [
-        "#si-taxi"
+        "#si-taxi\n",
+        "\n",
+        "def taxiPrice( distance):\n",
+        "  return  round( ( 4.00 + (0.25 * ( (distance*1000)/140 ) ) ) ,2)\n",
+        "\n",
+        "print(taxiPrice(152))\n"
       ]
     },
     {
@@ -674,14 +803,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "id": "9d3b9a2b-248e-4fda-b9a5-8adbc43cc2d0",
       "metadata": {
-        "id": "9d3b9a2b-248e-4fda-b9a5-8adbc43cc2d0"
+        "id": "9d3b9a2b-248e-4fda-b9a5-8adbc43cc2d0",
+        "outputId": "85c27f26-12e6-4a51-cd4c-5c3e79e5e42a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "Help on function fib in module __main__:\n",
+            "\n",
+            "fib(n)\n",
+            "    fib(n) is Recursive function to calculate the n-th Fibonacci number.\n",
+            "    Fn = Fn-1  + Fn-2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "#si-fibonacci"
+        "#si-fibonacci\n",
+        "def fib(n):\n",
+        "  \"\"\"\n",
+        "   fib(n) is Recursive function to calculate the n-th Fibonacci number.\n",
+        "   Fn = Fn-1  + Fn-2\n",
+        "  \"\"\"\n",
+        "  if n <= 0:\n",
+        "      return 0\n",
+        "  elif n == 1:\n",
+        "      return 1\n",
+        "  else:\n",
+        "      return fib(n-1) + fib(n-2)\n",
+        "\n",
+        "print(fib(6))\n",
+        "help(fib)\n",
+        "\n"
       ]
     },
     {
@@ -709,7 +871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "81d4327b-f7da-4d4a-9a0e-e8496f9ffeb4",
       "metadata": {
         "tags": [],
@@ -740,7 +902,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "fc5bcb05-f510-47dc-841c-ea6dd983795b",
       "metadata": {
         "tags": [],
@@ -774,13 +936,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "id": "592e784a-e47c-45ef-9bcf-59fd5437e20d",
       "metadata": {
         "tags": [],
-        "id": "592e784a-e47c-45ef-9bcf-59fd5437e20d"
+        "id": "592e784a-e47c-45ef-9bcf-59fd5437e20d",
+        "outputId": "e3f1503f-d062-414e-eabb-806f09e4c4b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on function factorial in module __main__:\n",
+            "\n",
+            "factorial(n)\n",
+            "    factorial(n) takes an integer (n) as input\n",
+            "    and returns the mathematical factorial\n",
+            "    of that number.\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "help(factorial)"
       ]
